--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "moon test",
-    "moon:build": "moon build --target js --debug",
+    "moon:build": "moon build --target js",
     "start": "vite",
     "build": "vite build"
   },
